infra/federation/matrix-d/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: federation-d
  namespace: gateway
spec:
  gatewayClassName: traefik
  listeners:
    - name: https-wellknown-d
      protocol: HTTPS
      port: 443
      hostname: ${federation_second_partner_server_name}
      tls:
        mode: Terminate
        certificateRefs:
          - name: matrix-d-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: matrix-d
    - name: https-matrix-d
      protocol: HTTPS
      port: 443
      hostname: matrix.${federation_second_partner_server_name}
      tls:
        mode: Terminate
        certificateRefs:
          - name: matrix-d-tls
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: matrix-d
