infra/federation/matrix-d/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse-d
  namespace: matrix-d
spec:
  parentRefs:
    - name: federation-d
      namespace: gateway
      sectionName: https-matrix-d
  hostnames:
    - matrix.${federation_second_partner_server_name}
  rules:
    - matches:
        - path: { type: PathPrefix, value: /_matrix }
        - path: { type: PathPrefix, value: /_synapse }
      backendRefs:
        - name: ess-synapse
          port: 8008
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: well-known-d
  namespace: matrix-d
spec:
  parentRefs:
    - name: federation-d
      namespace: gateway
      sectionName: https-wellknown-d
  hostnames:
    - ${federation_second_partner_server_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: ess-well-known
          port: 8010
